{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 104,
  "lineage": "1e913924-f296-ba67-4251-40f999c9e53d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ce5a87bf603fdb59",
            "arn": "arn:aws:ec2:ap-northeast-1:412869002243:elastic-ip/eipalloc-0ce5a87bf603fdb59",
            "domain": "vpc",
            "id": "eipalloc-0ce5a87bf603fdb59",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-13-159-134-159.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "13.159.134.159",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "msk-ngw-eip"
            },
            "tags_all": {
              "Name": "msk-ngw-eip",
              "Project": "wsc2026-msk"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "id": "eipalloc-0ce5a87bf603fdb59",
            "region": "ap-northeast-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "producer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-03107d83a97af3820",
            "arn": "arn:aws:ec2:ap-northeast-1:412869002243:instance/i-01069603d54127534",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "wsc2026-msk-ec2-role",
            "id": "i-01069603d54127534",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-058a1b4f0751008f6"
              }
            ],
            "primary_network_interface_id": "eni-058a1b4f0751008f6",
            "private_dns": "ip-192-168-10-16.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.10.16",
            "region": "ap-northeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-northeast-1:412869002243:key/de60e028-9500-4cb4-898f-73ddb7de3a97",
                "tags_all": {
                  "Project": "wsc2026-msk"
                },
                "throughput": 125,
                "volume_id": "vol-04dcbda5b1c4a2a73",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d80e22aac78c992a",
            "tags": {
              "Name": "wsc2026-sensor-producer"
            },
            "tags_all": {
              "Name": "wsc2026-sensor-producer",
              "Project": "wsc2026-msk"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0e9a91ca87ed147fb"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "id": "i-01069603d54127534",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_cloudwatch_log_group.msk",
            "aws_eip.ngw",
            "aws_iam_instance_profile.ec2",
            "aws_iam_role.ec2",
            "aws_iam_role_policy.ec2",
            "aws_iam_role_policy_attachment.ec2_ssm",
            "aws_internet_gateway.igw",
            "aws_msk_cluster.main",
            "aws_nat_gateway.ngw",
            "aws_route.priv_default",
            "aws_route_table.priv",
            "aws_s3_bucket.artifact",
            "aws_s3_object.app_binary",
            "aws_security_group.ec2",
            "aws_security_group.msk",
            "aws_subnet.this",
            "aws_vpc.main",
            "data.aws_caller_identity.current",
            "data.aws_iam_policy_document.ec2_assume",
            "data.aws_iam_policy_document.ec2_policy",
            "data.aws_partition.current",
            "data.aws_ssm_parameter.al2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:412869002243:internet-gateway/igw-02f438851d2da1567",
            "id": "igw-02f438851d2da1567",
            "owner_id": "412869002243",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "msk-igw"
            },
            "tags_all": {
              "Name": "msk-igw",
              "Project": "wsc2026-msk"
            },
            "vpc_id": "vpc-0087c6867a856a0ca"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "id": "igw-02f438851d2da1567",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ce5a87bf603fdb59",
            "association_id": "eipassoc-0c10b499ab21feb4e",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0cc3b46a8fecc7192",
            "network_interface_id": "eni-0cecd42d36c4562cc",
            "private_ip": "192.168.0.183",
            "public_ip": "13.159.134.159",
            "region": "ap-northeast-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0514a0ff96dd8b323",
            "tags": {
              "Name": "msk-ngw"
            },
            "tags_all": {
              "Name": "msk-ngw",
              "Project": "wsc2026-msk"
            },
            "vpc_id": "vpc-0087c6867a856a0ca"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "id": "nat-0cc3b46a8fecc7192",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_eip.ngw",
            "aws_internet_gateway.igw",
            "aws_subnet.this",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "priv_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "msk-priv-a",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0fe21115c287b1edb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0cc3b46a8fecc7192",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0fe21115c287b1edb",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0fe21115c287b1edb"
          },
          "dependencies": [
            "aws_eip.ngw",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_route_table.priv",
            "aws_subnet.this",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "msk-priv-d",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0fabbda7dd582b7f71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0cc3b46a8fecc7192",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0fabbda7dd582b7f7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0fabbda7dd582b7f7"
          },
          "dependencies": [
            "aws_eip.ngw",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_route_table.priv",
            "aws_subnet.this",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "pub_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02f438851d2da1567",
            "id": "r-rtb-08b7993a5bca2db3e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-08b7993a5bca2db3e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-1",
            "route_table_id": "rtb-08b7993a5bca2db3e"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pub",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "msk-priv-a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:412869002243:route-table/rtb-0fe21115c287b1edb",
            "id": "rtb-0fe21115c287b1edb",
            "owner_id": "412869002243",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [],
            "tags": {
              "Name": "msk-priv-a-rtb"
            },
            "tags_all": {
              "Name": "msk-priv-a-rtb",
              "Project": "wsc2026-msk"
            },
            "timeouts": null,
            "vpc_id": "vpc-0087c6867a856a0ca"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "id": "rtb-0fe21115c287b1edb",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "msk-priv-d",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:412869002243:route-table/rtb-0fabbda7dd582b7f7",
            "id": "rtb-0fabbda7dd582b7f7",
            "owner_id": "412869002243",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [],
            "tags": {
              "Name": "msk-priv-d-rtb"
            },
            "tags_all": {
              "Name": "msk-priv-d-rtb",
              "Project": "wsc2026-msk"
            },
            "timeouts": null,
            "vpc_id": "vpc-0087c6867a856a0ca"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "id": "rtb-0fabbda7dd582b7f7",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:412869002243:route-table/rtb-08b7993a5bca2db3e",
            "id": "rtb-08b7993a5bca2db3e",
            "owner_id": "412869002243",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [],
            "tags": {
              "Name": "msk-pub-rtb"
            },
            "tags_all": {
              "Name": "msk-pub-rtb",
              "Project": "wsc2026-msk"
            },
            "timeouts": null,
            "vpc_id": "vpc-0087c6867a856a0ca"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "id": "rtb-08b7993a5bca2db3e",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "msk-priv-a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066fe711fa29f69d1",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0fe21115c287b1edb",
            "subnet_id": "subnet-0d80e22aac78c992a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "id": "rtbassoc-066fe711fa29f69d1",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_route_table.priv",
            "aws_subnet.this",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "msk-priv-d",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c49df93efae8d461",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0fabbda7dd582b7f7",
            "subnet_id": "subnet-0e379300c681626d4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "id": "rtbassoc-0c49df93efae8d461",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_route_table.priv",
            "aws_subnet.this",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "msk-pub-a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027d7a92f152dc43a",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-08b7993a5bca2db3e",
            "subnet_id": "subnet-0514a0ff96dd8b323"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "id": "rtbassoc-027d7a92f152dc43a",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_route_table.pub",
            "aws_subnet.this",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "msk-pub-d",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0899441d3e89abf39",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-08b7993a5bca2db3e",
            "subnet_id": "subnet-097005745fb90e507"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "id": "rtbassoc-0899441d3e89abf39",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_route_table.pub",
            "aws_subnet.this",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:412869002243:security-group/sg-0e9a91ca87ed147fb",
            "description": "Producer EC2",
            "egress": [],
            "id": "sg-0e9a91ca87ed147fb",
            "ingress": [],
            "name": "wsc2026-msk-producer-sg",
            "name_prefix": "",
            "owner_id": "412869002243",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wsc2026-msk-producer-sg"
            },
            "tags_all": {
              "Name": "wsc2026-msk-producer-sg",
              "Project": "wsc2026-msk"
            },
            "timeouts": null,
            "vpc_id": "vpc-0087c6867a856a0ca"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "id": "sg-0e9a91ca87ed147fb",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:412869002243:security-group/sg-0abaa27e72ce6118f",
            "description": "Lambda VPC ENI",
            "egress": [],
            "id": "sg-0abaa27e72ce6118f",
            "ingress": [],
            "name": "wsc2026-msk-lambda-sg",
            "name_prefix": "",
            "owner_id": "412869002243",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wsc2026-msk-lambda-sg"
            },
            "tags_all": {
              "Name": "wsc2026-msk-lambda-sg",
              "Project": "wsc2026-msk"
            },
            "timeouts": null,
            "vpc_id": "vpc-0087c6867a856a0ca"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "id": "sg-0abaa27e72ce6118f",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "msk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:412869002243:security-group/sg-01bfbb4d763e12f57",
            "description": "MSK broker access (IAM SASL 9098)",
            "egress": [],
            "id": "sg-01bfbb4d763e12f57",
            "ingress": [],
            "name": "wsc2026-msk-cluster-sg",
            "name_prefix": "",
            "owner_id": "412869002243",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wsc2026-msk-cluster-sg"
            },
            "tags_all": {
              "Name": "wsc2026-msk-cluster-sg",
              "Project": "wsc2026-msk"
            },
            "timeouts": null,
            "vpc_id": "vpc-0087c6867a856a0ca"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "id": "sg-01bfbb4d763e12f57",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "msk-priv-a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:412869002243:subnet/subnet-0d80e22aac78c992a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "192.168.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d80e22aac78c992a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "412869002243",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "msk-priv-a"
            },
            "tags_all": {
              "Name": "msk-priv-a",
              "Project": "wsc2026-msk"
            },
            "vpc_id": "vpc-0087c6867a856a0ca"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "id": "subnet-0d80e22aac78c992a",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "msk-priv-d",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:412869002243:subnet/subnet-0e379300c681626d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "192.168.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e379300c681626d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "412869002243",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "msk-priv-d"
            },
            "tags_all": {
              "Name": "msk-priv-d",
              "Project": "wsc2026-msk"
            },
            "vpc_id": "vpc-0087c6867a856a0ca"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "id": "subnet-0e379300c681626d4",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "msk-pub-a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:412869002243:subnet/subnet-0514a0ff96dd8b323",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0514a0ff96dd8b323",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "412869002243",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "msk-pub-a"
            },
            "tags_all": {
              "Name": "msk-pub-a",
              "Project": "wsc2026-msk"
            },
            "vpc_id": "vpc-0087c6867a856a0ca"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "id": "subnet-0514a0ff96dd8b323",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "msk-pub-d",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:412869002243:subnet/subnet-097005745fb90e507",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-097005745fb90e507",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "412869002243",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "msk-pub-d"
            },
            "tags_all": {
              "Name": "msk-pub-d",
              "Project": "wsc2026-msk"
            },
            "vpc_id": "vpc-0087c6867a856a0ca"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "id": "subnet-097005745fb90e507",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:412869002243:vpc/vpc-0087c6867a856a0ca",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0096ea5fa7aa2c1da",
            "default_route_table_id": "rtb-0b65a839549dbfeaa",
            "default_security_group_id": "sg-04079b137299d10ab",
            "dhcp_options_id": "dopt-0d758f5658ea9e4c5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0087c6867a856a0ca",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b65a839549dbfeaa",
            "owner_id": "412869002243",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "msk-vpc"
            },
            "tags_all": {
              "Name": "msk-vpc",
              "Project": "wsc2026-msk"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "id": "vpc-0087c6867a856a0ca",
            "region": "ap-northeast-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "ec2_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:412869002243:security-group-rule/sgr-038136ac6ff64c544",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "outbound all (NAT, MSK, AWS API)",
            "from_port": null,
            "id": "sgr-038136ac6ff64c544",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-0e9a91ca87ed147fb",
            "security_group_rule_id": "sgr-038136ac6ff64c544",
            "tags": null,
            "tags_all": {
              "Project": "wsc2026-msk"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "id": "sgr-038136ac6ff64c544",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.ec2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "lambda_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:412869002243:security-group-rule/sgr-0b9a9999e7d52b928",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "outbound all",
            "from_port": null,
            "id": "sgr-0b9a9999e7d52b928",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-0abaa27e72ce6118f",
            "security_group_rule_id": "sgr-0b9a9999e7d52b928",
            "tags": null,
            "tags_all": {
              "Project": "wsc2026-msk"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "id": "sgr-0b9a9999e7d52b928",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.lambda",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "msk_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:412869002243:security-group-rule/sgr-020824e499da49e9f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-020824e499da49e9f",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-01bfbb4d763e12f57",
            "security_group_rule_id": "sgr-020824e499da49e9f",
            "tags": null,
            "tags_all": {
              "Project": "wsc2026-msk"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "id": "sgr-020824e499da49e9f",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.msk",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "msk_from_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "9092",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:412869002243:security-group-rule/sgr-08ff9f3e9880ef5a7",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "kafka 9092 from producer",
            "from_port": 9092,
            "id": "sgr-08ff9f3e9880ef5a7",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0e9a91ca87ed147fb",
            "region": "ap-northeast-1",
            "security_group_id": "sg-01bfbb4d763e12f57",
            "security_group_rule_id": "sgr-08ff9f3e9880ef5a7",
            "tags": null,
            "tags_all": {
              "Project": "wsc2026-msk"
            },
            "to_port": 9092
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "id": "sgr-08ff9f3e9880ef5a7",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.ec2",
            "aws_security_group.msk",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "9094",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:412869002243:security-group-rule/sgr-0f553e02b77ad77cc",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "kafka 9094 from producer",
            "from_port": 9094,
            "id": "sgr-0f553e02b77ad77cc",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0e9a91ca87ed147fb",
            "region": "ap-northeast-1",
            "security_group_id": "sg-01bfbb4d763e12f57",
            "security_group_rule_id": "sgr-0f553e02b77ad77cc",
            "tags": null,
            "tags_all": {
              "Project": "wsc2026-msk"
            },
            "to_port": 9094
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "id": "sgr-0f553e02b77ad77cc",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.ec2",
            "aws_security_group.msk",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "9098",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:412869002243:security-group-rule/sgr-074c67a8eb01f46f0",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "kafka 9098 from producer",
            "from_port": 9098,
            "id": "sgr-074c67a8eb01f46f0",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0e9a91ca87ed147fb",
            "region": "ap-northeast-1",
            "security_group_id": "sg-01bfbb4d763e12f57",
            "security_group_rule_id": "sgr-074c67a8eb01f46f0",
            "tags": null,
            "tags_all": {
              "Project": "wsc2026-msk"
            },
            "to_port": 9098
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "id": "sgr-074c67a8eb01f46f0",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.ec2",
            "aws_security_group.msk",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "msk_from_lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:412869002243:security-group-rule/sgr-0eca0fb196e790b25",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "SASL_SSL(IAM) from lambda vpc eni",
            "from_port": 9098,
            "id": "sgr-0eca0fb196e790b25",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0abaa27e72ce6118f",
            "region": "ap-northeast-1",
            "security_group_id": "sg-01bfbb4d763e12f57",
            "security_group_rule_id": "sgr-0eca0fb196e790b25",
            "tags": null,
            "tags_all": {
              "Project": "wsc2026-msk"
            },
            "to_port": 9098
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "id": "sgr-0eca0fb196e790b25",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.lambda",
            "aws_security_group.msk",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "msk_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:412869002243:security-group-rule/sgr-03346ee735dbae6fa",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "self reference for Lambda MSK event source ENI",
            "from_port": 0,
            "id": "sgr-03346ee735dbae6fa",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-01bfbb4d763e12f57",
            "region": "ap-northeast-1",
            "security_group_id": "sg-01bfbb4d763e12f57",
            "security_group_rule_id": "sgr-03346ee735dbae6fa",
            "tags": null,
            "tags_all": {
              "Project": "wsc2026-msk"
            },
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "id": "sgr-03346ee735dbae6fa",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.msk",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}